Commit 10: fixed bottom contact card and made it align  & snap down on smaller screens, website generaly done. just touch ups now

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,20 @@ div.dropdown-menu.show{
     }
 }
 
+@media only screen and (max-width: 1000px){
+    .mediaButtonsBottom{
+        position: relative;
+        bottom: 20;
+  
+    }
+}
+
+.mediaButtonsBottom{
+    
+}
+
+
+
 .purpleDiv{
     background-image: url("/assets/divbg2.jpg") ;
     background-repeat: repeat-y;
